OO-8857: Change the event editor to merge current and new taxonomies instead of replacing them